--- a/sd.html
+++ b/sd.html
@@ -222,7 +222,7 @@
             <div class="project-content">
                 <h2 class="project-title">Shane Duff Realty: A Site to Call "Home"</h2>
                 <div class="project-description">
-                    Shane Duff is relatively new to real estate. He's been an agent for about a year, and until now he's borrowed a page on a fellow agent's website to inform visitors about him and generate leads. Whenever Shane received a real estate lead from his coworker's website, a percentage of the pay would have to go his fellow agent. After some time getting more comfortable in real estate, Shane decided he wanted to get started making his own website. 
+                    Shane Duff has been a real estate agent for a couple of years, and until now he's borrowed a page on a fellow agent's website to inform visitors about him and generate leads. Whenever Shane received a real estate lead from his coworker's website, a percentage of the pay would have to go his fellow agent. Shane decided he wanted to get started making his own website to get his own leads. 
                 </div>
             </div>
             <a href="https://shaneduffrealtor.com/" target="_blank">
@@ -235,7 +235,7 @@
             </a>
             <div class="final-description">
                 <br>
-                Shane wanted a simple yet effective site to connect with potential buyers and sellers. I created a baseline website in WordPress for him to get started, complete with contact form, testimonials, and links to his online listings. I look forward to continuing development on his site. 
+                I worked with Shane to build a simple site to call his own. I created a baseline website in WordPress for us to get started, complete with contact form, testimonials, and links to his online listings. I look forward to continuing development on his site. 
             </div>
         </div>
     </div>
