--- a/index.html
+++ b/index.html
@@ -576,9 +576,9 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <h1>Tanner Martin</h1>
-        <h2>UX / UI DESIGNER</h2>
+        <h2>WEB DESIGNER AND DEVELOPER</h2>
         <p>
-            I'm a freelance website designer and developer in Roanoke, Virginia, with a passion for UI and UX. Since graduating college, I've been working with several small businesses building their websites and maintaining their digital presence. Along with working on client sites, I also enjoy working on my own web-based passion projects, some of which are showcased in this portfolio. Take a moment to check this page out, and reach out to me for your website consulting!
+            I'm a freelance website designer and developer in Roanoke, Virginia, with a passion for UI and UX design. Since graduating college, I've been working with several small businesses building their websites and maintaining their digital presence. Along with working on client sites, I also enjoy working on my own web-based passion projects, some of which are showcased in this portfolio. Take a moment to check this page out, and reach out to me for your website consulting!
         </p>
         <div class="sidebar-footer">
             
