--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
         <!-- Divi Design Challenge Section -->
         <div class="section">
             <div class="project">
-                <h3 class="project-title">Divi Design Challenge</h3>
+                <h3 class="project-title">Divi Design Concept</h3>
                 <div class="project-video media-container">
                     <video autoplay muted loop playsinline preload="none" poster="https://placehold.co/1200x600/111/333?text=Divi+Design+Challenge">
                         <source src="design challenge.mp4" type="video/mp4">
