Revise personal bio and add recommendation section
Updated personal description and added a professional recommendation section.

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         <h1>Tanner Martin</h1>
         <h2>IT PROFESSIONAL, WEB DESIGNER AND DEVELOPER</h2>
         <p>
-            I'm a freelance website designer and developer in Roanoke, Virginia, with a passion for UI and UX. Since graduating college, I've been working with several small businesses building their websites and maintaining their digital presence. Along with working on client sites, I also enjoy working on my own web-based passion projects, some of which are showcased in this portfolio. Take a moment to check this page out, and reach out to me for your website consulting!
+            I’m a web designer and developer based in Roanoke, Virginia, with a strong background in IT systems and infrastructure. Since graduating college, I’ve worked with small businesses to design and maintain websites while also supporting the underlying technology that keeps them running—servers, hosting environments, performance optimization, backups, and troubleshooting. Alongside client work, I build web-based projects that let me apply systems-focused thinking to real-world problems, combining clean design with stable, scalable infrastructure. Take a look around, and feel free to reach out if you’re looking for website design, development, or systems-focused technical consulting.
         </p>
         <div class="sidebar-footer">
             
@@ -710,6 +710,35 @@
                     I continue to collaborate with Tanner on new product launches, general updating and maintenance of my website. He always offers ideas on how to apply new creative ways to evolve my website and keep my customers engaged.
                 </p>
                 <p class="testimonial-author">Kathreen, curioStudio</p>
+            </div>
+        </div>
+
+        <!-- Professional Recommendation Section -->
+        <div class="section testimonial-section">
+            <h3 class="section-title">Professional Recommendation</h3>
+            
+            <div class="testimonial">
+                <p class="testimonial-text">
+                    I am writing to offer my strong recommendation for Tanner Martin for an IT position. I had the opportunity to directly manage Tanner in his role as an IT Analyst at Kissito Healthcare, and during that time he consistently demonstrated the qualities and work ethic that distinguish high-performing IT professionals.
+                </p>
+
+                <p class="testimonial-text">
+                    Tanner is an exceptionally attentive listener who takes the time to fully understand technical requirements, user concerns, and business priorities before acting. This skill enabled him to resolve issues efficiently and accurately, often reducing the need for repeated incidents or follow-up clarification.
+                </p>
+
+                <p class="testimonial-text">
+                    He is a fast learner, quickly becoming proficient with new systems, tools, and processes and applying them effectively with minimal supervision. Throughout his tenure, Tanner proved to be highly dependable and professional. His demeanor with end users and colleagues reflected patience, accountability, and a strong service mindset.
+                </p>
+
+                <p class="testimonial-text">
+                    From a performance standpoint, Tanner delivered measurable impact through his speed to competency, reliability in handling assigned tasks, and effectiveness in resolving technical issues on the first pass. He became a trusted point of contact, helping maintain continuity of service and minimize downtime.
+                </p>
+
+                <p class="testimonial-text">
+                    Beyond his technical abilities, Tanner demonstrates a strong growth mindset. He actively seeks feedback, applies it quickly, and shows genuine motivation to continue developing his career in IT. I recommend Tanner Martin without reservation and am confident he will bring the same level of dedication and performance to his next role.
+                </p>
+
+                <p class="testimonial-author">Sam Joseph, Kissito Healthcare</p>
             </div>
         </div>
 
