Revise sidebar introduction for clarity and focus
Updated the introduction paragraph to enhance clarity and focus on technical consulting.

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         <h1>Tanner Martin</h1>
         <h2>IT PROFESSIONAL, WEB DESIGNER AND DEVELOPER</h2>
         <p>
-            I’m a web designer and developer based in Roanoke, Virginia, with a strong background in IT systems and infrastructure. Since graduating college, I’ve worked with small businesses to design and maintain websites while also supporting the underlying technology that keeps them running—servers, hosting environments, performance optimization, backups, and troubleshooting. Alongside client work, I build web-based projects that let me apply systems-focused thinking to real-world problems, combining clean design with stable, scalable infrastructure. Take a look around, and feel free to reach out if you’re looking for website design, development, or systems-focused technical consulting.
+            I’m an IT professional and Web Developer based in Roanoke, Virginia, with a strong background in systems and infrastructure. Since graduating college, I’ve worked with small businesses to design and maintain websites while also supporting the underlying technology that keeps them running- hosting environments, performance optimization, backups, and troubleshooting. Alongside client work, I build web-based projects that let me apply systems-focused thinking to real-world problems, combining clean design with stable, scalable infrastructure. Take a look around, and feel free to reach out to me for your technical consulting needs.
         </p>
         <div class="sidebar-footer">
             
